--- a/captive-browser-arch-librewolf.toml
+++ b/captive-browser-arch-librewolf.toml
@@ -106,7 +106,7 @@ browser = """\
 #
 # To install the systemd-networkd-dns command, run:
 #
-#  $ go get github.com/FiloSottile/captive-browser/cmd/systemd-networkd-dns
+#  $ go install github.com/cyb3rko/captive-browser/cmd/systemd-networkd-dns@latest
 #
 dhcp-dns = "$(go env GOPATH)/bin/systemd-networkd-dns wlan0"
 
