--- a/captive-browser-dhcpcd-chromium.toml
+++ b/captive-browser-dhcpcd-chromium.toml
@@ -1,17 +1,18 @@
 # browser is the shell (/bin/sh) command executed once the proxy starts.
 # When browser exits, the proxy exits. An extra env var PROXY is available.
 #
-# Here, we use a separate Chrome instance in Incognito mode, so that
+# Here, we use a separate Chromium instance in Incognito mode, so that
 # it can run (and be waited for) alongside the default one, and that
 # it maintains no state across runs. To configure this browser open a
 # normal window in it, settings will be preserved.
 browser = """
     chromium \
-    --user-data-dir="$HOME/.chromium-captive" \
+    --user-data-dir="$HOME/.config/chromium-captive" \
     --proxy-server="socks5://$PROXY" \
-    --host-resolver-rules="MAP * ~NOTFOUND , EXCLUDE localhost" \
-    --no-first-run --new-window --incognito \
-    http://example.com
+    --no-first-run \
+    --new-window \
+    --incognito \
+    http://neverssl.com
 """
 
 # dhcp-dns is the shell (/bin/sh) command executed to obtain the DHCP
@@ -24,4 +25,3 @@ dhcp-dns = "dhcpcd -U wlan0 | grep domain_name_servers"
 
 # socks5-addr is the listen address for the SOCKS5 proxy server.
 socks5-addr = "localhost:1666"
-
