--- a/captive-browser-ubuntu-chrome.toml
+++ b/captive-browser-ubuntu-chrome.toml
@@ -7,21 +7,19 @@
 # normal window in it, settings will be preserved.
 browser = """
     google-chrome \
-    --user-data-dir="$HOME/.google-chrome-captive" \
+    --user-data-dir="$HOME/.config/google-chrome-captive" \
     --proxy-server="socks5://$PROXY" \
-    --host-resolver-rules="MAP * ~NOTFOUND , EXCLUDE localhost" \
-    --no-first-run --new-window --incognito \
-    http://example.com
+    --no-first-run \
+    --new-window \
+    --incognito \
+    http://neverssl.com
 """
 
 # dhcp-dns is the shell (/bin/sh) command executed to obtain the DHCP
 # DNS server address. The first match of an IPv4 regex is used.
 # IPv4 only, because let's be real, it's a captive portal.
 #
-# `wlp3s0` is your network interface (eth0, wlan0 ...)
-#
 dhcp-dns = "nmcli dev show | grep IP4.DNS"
 
 # socks5-addr is the listen address for the SOCKS5 proxy server.
 socks5-addr = "localhost:1666"
-
